# CivitaiManager

./: .comfyignore  .gitignore  CHANGELOG.md  README.md  __init__.py  manager_api.py  nodes.py  pyproject.toml
.github/workflows/: publish_action.yml
backend/: __init__.py  client.py  config.py  downloads.py  library.py  routes.py
js/: civitai_lora_node.js  civitai_manager.js
js/civitai/: api.js  components.js  constants.js  favorites.js  i18n.js  media.js  state.js  styles.js
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json
tests/: test_manager_api.py  test_nodes.py
